--- a/index.html
+++ b/index.html
@@ -1,67 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Burlaky Shop</title>
-    <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon">
-</head>
-<body>
-    <header>
-        <div id="logo">
-            <span><a href="index.html">Burlaky Shop<br>and equipment rentals</a></span>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#shop">Shop</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/facebook.png" style="width: 16px;height: 16px;"></a>
-                <li><a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/instagram.png" style="width: 16px;height: 16px;"></a></li>                
-                <li><a href="shoping-cart.html"><img src="img/supermarket.png" style="width: 16px;height: 16px;"></a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="shop">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Burlaky Shop</title>
+        <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon">
+        <link rel="stylesheet" href="css/index.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <span>
+                    <a class="logo" href="index.html">
+                        Burlaky Shop<br>and equipment rentals
+                    </a>
+                </span>
+</div>
+<ul class="menu">
+    <li>
+        <a href="#shop">Shop</a>
+    </li>
+    <li>
+        <a href="#about">About</a>
+    </li>
+    <li>
+        <a href="faq.html">FAQ</a>
+    </li>
+    <li>
+        <a href="contact.html">Contact</a>
+    </li>
+    <li>
+        <a href="https://www.facebook.com/Vataga.Burlakiv/">
+            <img src="img/facebook.png" style="width: 16px;height: 16px;">
+        </a>
+    <li>
+        <a href="https://www.instagram.com/vataha.burlakiv/">
+            <img src="img/instagram.png" style="width: 16px;height: 16px;">
+        </a>
+    </li>
+    <li>
+        <a href="shoping-cart.html">
+            <img src="img/supermarket.png" style="width: 16px;height: 16px;">
+        </a>
+    </li>
+</ul>
+</nav></header>
+<main>
+    <section id="shop">
+        <article class="product-card">
             <img src="img/ecotorba.jpg" alt="ecobag">
-            <img src="img/sweetshot.jpg" alt="sweetshot">
-            <img src="img/burlakyj.jpg" alt="t-shirt">
-            <img src="img/sweetshot.old.jpg" alt="sweetshot">
             <h3>BURLAKY ECO BAG</h3>
             <h3>150,00</h3>
+            <div class="button-group">
+                <button class="button card-button">Buy</button>
+            </div>
+        </article>
+        <article class="product-card">
+            <img src="img/sweetshot.jpg" alt="sweetshot">
             <h3>BURLAKY HOODIE</h3>
             <h3>350,00</h3>
+            <div class="button-group">
+                <button class="button card-button">Buy</button>
+            </div>
+        </article>
+        <article class="product-card">
+            <img src="img/burlakyj.jpg" alt="t-shirt">
             <h3>BURLA-BURLA-BURLAKUY-T-SHORT</h3>
             <h3>100,00</h3>
+            <div class="button-group">
+                <button class="button card-button">Buy</button>
+            </div>
+        </article>
+        <article class="product-card">
+            <img src="img/sweetshot.old.jpg" alt="sweetshot">
             <h3>BURLAKY SWEET-SHOT</h3>
             <h3>350,00</h3>
-        </section>
-        <section id="about">
-            <h3>About Us</h3>
-            <p>We proposed to bye great items from our shop also we had a <br>lot of outdoor equipment to rent.<br>Since 1946</p>
-        </section>
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a></li>
-                    <li><a href="shypping returns.html">Shipping & Returns</a></li>
-                    <li><a href="policy.html#payment">Payment Methods</a></li>
-                    <li><a href="policy.html">Store Policy</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><p>Tel: 123-456-7890</p></li>
-                    <li><a href="https://www.facebook.com/Vataga.Burlakiv/">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/vataha.burlakiv/">Instagram</a></li>
-                    <li><a href="contact.html"><p>Join our mailing list and never miss an update</p></a></li>
-                    <input type="email" placeholder="Enter your email here*">
-                    <input type="submit">
-                </ul>
-            </nav>
-        </section>
-       
-    </main>
-</body>
-</html>
+            <div class="button-group">
+                <button class="button card-button">Buy</button>
+            </div>
+        </article>
+    </section>
+    <section id="about">
+        <h3>About Us</h3>
+        <p>
+            We proposed to bye great items from our shop also we had a <br>
+            lot of outdoor equipment to rent.<br>Since 1946
+        </p>
+    </section>
+    <footer>
+        <nav>
+            <ul class="footer">
+                <li>
+                    <a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a>
+                </li>
+                <li>
+                    <a href="shypping returns.html">Shipping &Returns</a>
+                </li>
+                <li>
+                    <a href="policy.html#payment">Payment Methods</a>
+                </li>
+                <li>
+                    <a href="policy.html">Store Policy</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <p>Tel: 123-456-7890</p>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/Vataga.Burlakiv/">Facebook</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/vataha.burlakiv/">Instagram</a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        <p>Join our mailing list and never miss an update</p>
+                    </a>
+                </li>
+                <input type="email" placeholder="Enter your email here*">
+                <input type="submit">
+            </ul>
+        </nav>
+    </footer>
+</main>
+</body></html>
