--- a/index.html
+++ b/index.html
@@ -45,45 +45,86 @@
         </a>
     </li>
 </ul>
-</nav></header>
+</nav>
+</header>
 <main>
-    <section id="shop">
-        <article class="product-card">
-            <img src="img/ecotorba.jpg" alt="ecobag">
-            <h3>BURLAKY ECO BAG</h3>
-            <h3>150,00</h3>
-            <div class="button-group">
-                <button class="button card-button">Buy</button>
-            </div>
-        </article>
-        <article class="product-card">
-            <img src="img/sweetshot.jpg" alt="sweetshot">
-            <h3>BURLAKY HOODIE</h3>
-            <h3>350,00</h3>
-            <div class="button-group">
-                <button class="button card-button">Buy</button>
-            </div>
-        </article>
-        <article class="product-card">
-            <img src="img/burlakyj.jpg" alt="t-shirt">
-            <h3>BURLA-BURLA-BURLAKUY-T-SHORT</h3>
-            <h3>100,00</h3>
-            <div class="button-group">
-                <button class="button card-button">Buy</button>
-            </div>
-        </article>
-        <article class="product-card">
-            <img src="img/sweetshot.old.jpg" alt="sweetshot">
-            <h3>BURLAKY SWEET-SHOT</h3>
-            <h3>350,00</h3>
-            <div class="button-group">
-                <button class="button card-button">Buy</button>
-            </div>
-        </article>
-    </section>
+<!-- Card from web -->
+
+<!-- First product -->
+<section class="cards">
+<div class="border">
+  <div class="wrap">
+    <div class="product-wrap">
+      <a href=""><img src="img/ecotorba.jpg" alt="ecobag"></a>
+    </div>
+    <div class="loop-action">
+      <a href="" class="add-to-cart">Details</a>
+      <a href="" class="loop-add-to-cart">To cart</a>
+    </div>
+  </div>
+    <div class="product-info">
+            <h3 class="product-title">BURLAKY ECO BAG</h3>
+      <div class="price">&#8372; 150</div>
+   </div>
+</div>
+
+<!-- Second product -->
+
+<div class="border">
+  <div class="wrap">
+    <div class="product-wrap">
+      <a href=""><img src="img/sweetshot.old.jpg" alt="sweetshot"></a>
+    </div>
+    <div class="loop-action">
+      <a href="" class="add-to-cart">Details</a>
+      <a href="" class="loop-add-to-cart">To cart</a>
+    </div>
+  </div>
+    <div class="product-info">
+            <h3 class="product-title">BURLAKY SWEET-SHOT</h3>
+      <div class="price">&#8372; 350</div>
+   </div>
+</div>
+
+<!-- Third product -->
+
+<div class="border">
+  <div class="wrap">
+    <div class="product-wrap">
+      <a href=""><img src="img/sweetshot.jpg" alt="sweetshot"></a>
+    </div>
+    <div class="loop-action">
+      <a href="" class="add-to-cart">Details</a>
+      <a href="" class="loop-add-to-cart">To cart</a>
+    </div>
+  </div>
+    <div class="product-info">
+            <h3 class="product-title">BURLAKY HOODIE</h3>
+      <div class="price">&#8372; 350</div>
+   </div>
+</div>
+
+<!-- Fourth product -->
+
+<div class="border">
+  <div class="wrap">
+    <div class="product-wrap">
+      <a href=""><img src="img/burlakyj.jpg" alt="t-short"></a>
+    </div>
+    <div class="loop-action">
+      <a href="" class="add-to-cart">Details</a>
+      <a href="" class="loop-add-to-cart">To cart</a>
+    </div>
+  </div>
+    <div class="product-info">
+            <h3 class="product-title">BURLA-BURLA-BURLAKUY T-SHORT</h3>
+      <div class="price">&#8372; 100</div>
+   </div>
+</div>
+</section>
     <section id="about">
         <h3>About Us</h3>
-        <p>
+        <p id="aboutus">
             We proposed to bye great items from our shop also we had a <br>
             lot of outdoor equipment to rent.<br>Since 1946
         </p>
