need to create flex-boxes on footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         Burlaky Shop<br>and equipment rentals
                     </a>
                 </span>
-</div>
+
 <ul class="menu">
     <li>
         <a href="#shop">Shop</a>
@@ -32,16 +32,16 @@
     </li>
     <li>
         <a href="https://www.facebook.com/Vataga.Burlakiv/">
-            <img src="img/facebook.png" style="width: 16px;height: 16px;">
+            <img src="img/facebook.png" alt="facebook" style="width: 16px;height: 16px;">
         </a>
     <li>
         <a href="https://www.instagram.com/vataha.burlakiv/">
-            <img src="img/instagram.png" style="width: 16px;height: 16px;">
+            <img src="img/instagram.png" alt="instagram" style="width: 16px;height: 16px;">
         </a>
     </li>
     <li>
         <a href="shoping-cart.html">
-            <img src="img/supermarket.png" style="width: 16px;height: 16px;">
+            <img src="img/supermarket.png" alt="supermarket" style="width: 16px;height: 16px;">
         </a>
     </li>
 </ul>
@@ -125,18 +125,19 @@
     <section id="about">
         <h3>About Us</h3>
         <p id="aboutus">
-            We proposed to bye great items from our shop also we had a <br>
-            lot of outdoor equipment to rent.<br>Since 1946
+            We propose you to bye unique items from our branded shop.
+Additionally, we have a lot of outdoor equipment ready for rent.<br>
+Vataha Burlak | Since 1946
         </p>
     </section>
     <footer>
         <nav>
-            <ul class="footer">
+            <ul class="fstyle">
                 <li>
                     <a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a>
                 </li>
                 <li>
-                    <a href="shypping returns.html">Shipping &Returns</a>
+                    <a href="shyppingreturns.html">Shipping & Returns</a>
                 </li>
                 <li>
                     <a href="policy.html#payment">Payment Methods</a>
@@ -161,9 +162,10 @@
                         <p>Join our mailing list and never miss an update</p>
                     </a>
                 </li>
+            </ul>
                 <input type="email" placeholder="Enter your email here*">
                 <input type="submit">
-            </ul>
+            
         </nav>
     </footer>
 </main>
