--- a/index.html
+++ b/index.html
@@ -132,10 +132,7 @@ Vataha Burlak | Since 1946
     </section>
     <footer>
         <nav>
-            <ul class="fstyle">
-                <li>
-                    <a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a>
-                </li>
+            <ul class="box1">
                 <li>
                     <a href="shyppingreturns.html">Shipping & Returns</a>
                 </li>
@@ -145,12 +142,19 @@ Vataha Burlak | Since 1946
                 <li>
                     <a href="policy.html">Store Policy</a>
                 </li>
+            </ul>
+            <ul class="box2">
+                <li>
+                    <a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a>
+                </li>
                 <li>
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <p>Tel: 123-456-7890</p>
                 </li>
+            </ul>
+            <ul class="box3">
                 <li>
                     <a href="https://www.facebook.com/Vataga.Burlakiv/">Facebook</a>
                 </li>
@@ -165,8 +169,7 @@ Vataha Burlak | Since 1946
             </ul>
                 <input type="email" placeholder="Enter your email here*">
                 <input type="submit">
-            
-        </nav>
+            </nav>
     </footer>
 </main>
 </body></html>
