--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Vataha Burlak | Since 1946
         </p>
     </section>
     <footer>
-        <nav>
+        <nav class="fstyle">
             <ul class="box1">
                 <li>
                     <a href="shyppingreturns.html">Shipping & Returns</a>
