--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@ Additionally, we have a lot of outdoor equipment ready for rent.<br>
 Vataha Burlak | Since 1946
         </p>
     </section>
+</main>
     <footer>
-        <nav class="fstyle">
+        <nav>
             <ul class="box1">
                 <li>
                     <a href="shyppingreturns.html">Shipping & Returns</a>
@@ -171,5 +172,5 @@ Vataha Burlak | Since 1946
                 <input type="submit">
             </nav>
     </footer>
-</main>
-</body></html>
+</body>
+</html>
