--- a/index.html
+++ b/index.html
@@ -131,42 +131,24 @@ Vataha Burlak | Since 1946
         </p>
     </section>
 </main>
-    <footer>
-        <nav>
-            <ul>
-                <li id="A">
-                    <a href="shyppingreturns.html">Shipping & Returns</a>
-                </li>
-                <li id="B">
-                    <a href="policy.html#payment">Payment Methods</a>
-                </li>
-                <li id="C">
-                    <a href="policy.html">Store Policy</a>
-                </li>
-                <li>
-                    <a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                    <p>Tel: 123-456-7890</p>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/Vataga.Burlakiv/">Facebook</a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/vataha.burlakiv/">Instagram</a>
-                </li>
-                <li>
-                    <a href="contact.html">
-                        <p>Join our mailing list and never miss an update</p>
-                    </a>
-                </li>
-            </ul>
-                <input type="email" placeholder="Enter your email here*">
-                <input type="submit">
-            </nav>
-    </footer>
+
+
+<footer>
+    <nav>
+        <a href="shyppingreturns.html">Shipping & Returns</a>
+        <a href="policy.html#payment">Payment Methods</a>
+        <a href="policy.html">Store Policy</a>
+        <a href="contact.html">Contact</a>
+        <p>Tel: 123-456-7890</p>
+    </nav>
+    <div class="social">
+        <a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/footer_facebook.png" alt="FB"></a>
+        <a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/footer_instagram.png" alt="instagram"></a>
+        <a href="mailto:vataha.burlakiv@gmail.com"><img src="img/footer_email.png" alt="email"></a>
+    </div>
+    <div class="logo">
+        <a href="index.html"><img src="img/logoVB.png" alt="VB"></a>
+    </div>
+</footer>
 </body>
 </html>
