--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Burlaky Shop</title>
-        <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <span>
-                    <a class="logo" href="index.html">
-                        Burlaky Shop<br>and equipment rentals
-                    </a>
-                </span>
-
-<ul class="menu">
-    <li>
-        <a href="#shop">Shop</a>
-    </li>
-    <li>
-        <a href="#about">About</a>
-    </li>
-    <li>
-        <a href="faq.html">FAQ</a>
-    </li>
-    <li>
-        <a href="contact.html">Contact</a>
-    </li>
-    <li>
-        <a href="https://www.facebook.com/Vataga.Burlakiv/">
-            <img src="img/facebook.png" alt="facebook" style="width: 16px;height: 16px;">
-        </a>
-    <li>
-        <a href="https://www.instagram.com/vataha.burlakiv/">
-            <img src="img/instagram.png" alt="instagram" style="width: 16px;height: 16px;">
-        </a>
-    </li>
-    <li>
-        <a href="shoping-cart.html">
-            <img src="img/supermarket.png" alt="supermarket" style="width: 16px;height: 16px;">
-        </a>
-    </li>
-</ul>
-</nav>
-</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Burlaky Shop</title>
+    <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <div class="header">
+      <div class="header__section">
+        <div class="header__item hederlogo">
+          Burlaky Shop<br />and equipment rentals
+        </div>
+        <div class="header__item headerButton"><a href="#shop">Shop</a></div>
+        <div class="header__item headerButton"><a href="#about">About</a></div>
+        <div class="header__item headerButton"><a href="faq.html">FAQ</a></div>
+        <div class="header__item headerButton">
+          <a href="contact.html">Contact</a>
+        </div>
+        <div class="header__section">
+        <div class="header__item headerButton">
+          <a href="https://www.facebook.com/Vataga.Burlakiv/"></a
+          ><img
+            src="img/facebook.png"
+            alt="facebook"
+            style="width: 16px;height: 16px;"
+          />
+        </div>
+        <div class="header__item headerButton">
+          <a href="https://www.instagram.com/vataha.burlakiv/"></a
+          ><img
+            src="img/instagram.png"
+            alt="instagram"
+            style="width: 16px;height: 16px;"
+          />
+        </div>
+        <div class="header__item headerButton">
+          <a href="shoping-cart.html"></a
+          ><img
+            src="img/supermarket.png"
+            alt="supermarket"
+            style="width: 16px;height: 16px;"
+          />
+        </div>
+        </div>
+      </div>
+    </div>
+  </body>
 <main>
 <!-- Card from web -->
 
@@ -142,12 +144,9 @@ Vataha Burlak | Since 1946
         <p>Tel: 123-456-7890</p>
     </nav>
     <div class="social">
-        <a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/footer_facebook.png" alt="FB"></a>
-        <a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/footer_instagram.png" alt="instagram"></a>
-        <a href="mailto:vataha.burlakiv@gmail.com"><img src="img/footer_email.png" alt="email"></a>
-    </div>
-    <div class="logo">
-        <a href="index.html"><img src="img/logoVB.png" alt="VB"></a>
+        <a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/footer-facebook.png" alt="FB"></a>
+        <a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/footer-instagram.png" alt="instagram"></a>
+        <a href="mailto:vataha.burlakiv@gmail.com"><img src="img/footer-email.png" alt="email"></a>
     </div>
 </footer>
 </body>
