--- a/index.html
+++ b/index.html
@@ -50,10 +50,18 @@
     </div>
   </body>
 <main>
+<div class="card">
+<div class="top-card">
+<img src="img/ecotorba.jpg" alt="ecobag">
+</div>
+<div class="bottom-card">
+<p class="price">&#8372; 150</p>
+</div>
+</div>
 <!-- Card from web -->
 
 <!-- First product -->
-<section class="cards">
+<!-- <section class="cards">
 <div class="border">
   <div class="wrap">
     <div class="product-wrap">
@@ -68,11 +76,11 @@
             <h3 class="product-title">BURLAKY ECO BAG</h3>
       <div class="price">&#8372; 150</div>
    </div>
-</div>
+</div> -->
 
 <!-- Second product -->
 
-<div class="border">
+<!-- <div class="border">
   <div class="wrap">
     <div class="product-wrap">
       <a href=""><img src="img/sweetshot.old.jpg" alt="sweetshot"></a>
@@ -86,11 +94,11 @@
             <h3 class="product-title">BURLAKY SWEET-SHOT</h3>
       <div class="price">&#8372; 350</div>
    </div>
-</div>
+</div> -->
 
 <!-- Third product -->
 
-<div class="border">
+<!-- <div class="border">
   <div class="wrap">
     <div class="product-wrap">
       <a href=""><img src="img/sweetshot.jpg" alt="sweetshot"></a>
@@ -104,11 +112,11 @@
             <h3 class="product-title">BURLAKY HOODIE</h3>
       <div class="price">&#8372; 350</div>
    </div>
-</div>
+</div> -->
 
 <!-- Fourth product -->
 
-<div class="border">
+<!-- <div class="border">
   <div class="wrap">
     <div class="product-wrap">
       <a href=""><img src="img/burlakyj.jpg" alt="t-short"></a>
@@ -123,7 +131,7 @@
       <div class="price">&#8372; 100</div>
    </div>
 </div>
-</section>
+</section> -->
     <section id="about">
         <h3>About Us</h3>
         <p id="aboutus">
