--- a/index.html
+++ b/index.html
@@ -50,88 +50,48 @@
     </div>
   </body>
 <main>
-<div class="card">
-<div class="top-card">
-<img src="img/ecotorba.jpg" alt="ecobag">
-</div>
-<div class="bottom-card">
-<p class="price">&#8372; 150</p>
-</div>
-</div>
-<!-- Card from web -->
-
-<!-- First product -->
-<!-- <section class="cards">
-<div class="border">
-  <div class="wrap">
-    <div class="product-wrap">
-      <a href=""><img src="img/ecotorba.jpg" alt="ecobag"></a>
-    </div>
-    <div class="loop-action">
-      <a href="" class="add-to-cart">Details</a>
-      <a href="" class="loop-add-to-cart">To cart</a>
-    </div>
-  </div>
-    <div class="product-info">
-            <h3 class="product-title">BURLAKY ECO BAG</h3>
-      <div class="price">&#8372; 150</div>
-   </div>
-</div> -->
-
-<!-- Second product -->
-
-<!-- <div class="border">
-  <div class="wrap">
-    <div class="product-wrap">
-      <a href=""><img src="img/sweetshot.old.jpg" alt="sweetshot"></a>
-    </div>
-    <div class="loop-action">
-      <a href="" class="add-to-cart">Details</a>
-      <a href="" class="loop-add-to-cart">To cart</a>
-    </div>
-  </div>
-    <div class="product-info">
-            <h3 class="product-title">BURLAKY SWEET-SHOT</h3>
-      <div class="price">&#8372; 350</div>
-   </div>
-</div> -->
-
-<!-- Third product -->
-
-<!-- <div class="border">
-  <div class="wrap">
-    <div class="product-wrap">
-      <a href=""><img src="img/sweetshot.jpg" alt="sweetshot"></a>
-    </div>
-    <div class="loop-action">
-      <a href="" class="add-to-cart">Details</a>
-      <a href="" class="loop-add-to-cart">To cart</a>
-    </div>
-  </div>
-    <div class="product-info">
-            <h3 class="product-title">BURLAKY HOODIE</h3>
-      <div class="price">&#8372; 350</div>
-   </div>
-</div> -->
-
-<!-- Fourth product -->
-
-<!-- <div class="border">
-  <div class="wrap">
-    <div class="product-wrap">
-      <a href=""><img src="img/burlakyj.jpg" alt="t-short"></a>
-    </div>
-    <div class="loop-action">
-      <a href="" class="add-to-cart">Details</a>
-      <a href="" class="loop-add-to-cart">To cart</a>
-    </div>
-  </div>
-    <div class="product-info">
-            <h3 class="product-title">BURLA-BURLA-BURLAKUY T-SHORT</h3>
-      <div class="price">&#8372; 100</div>
-   </div>
-</div>
-</section> -->
+  <div class="product-list">
+    <article class="product-card">
+        <div class="item-name">ECO-TORBA</div>
+        <img src="img/ecotorba.jpg" alt="ecotorba">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="price">150 &#8372</div>
+        <div class="button-group">
+            <button class="button card-button">Info</button>
+            <button class="button card-button">Buy</button>
+        </div>
+    </article>
+    <article class="product-card">
+      <div class="item-name">PS Girls</div>
+      <img src="img/futbagirls.jpg" alt="Cybertruck">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="price">350 &#8372</div>
+        <div class="button-group">
+            <button class="button card-button">Info</button>
+            <button class="button card-button">Buy</button>
+        </div>
+    </article>
+    <article class="product-card">
+      <div class="item-name">White Jack</div>
+      <img src="img/futbolka.jpg" alt="Cybertruck">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="price">150 &#8372</div>
+        <div class="button-group">
+            <button class="button card-button">Info</button>
+            <button class="button card-button">Buy</button>
+        </div>
+    </article>
+    <article class="product-card">
+      <div class="item-name">PS Boys</div>
+      <img src="img/futbaboys.jpg" alt="Cybertruck">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="price">150 &#8372</div>
+        <div class="button-group">
+            <button class="button card-button">Info</button>
+            <button class="button card-button">Buy</button>
+        </div>
+    </article>
+  </main>
     <section id="about">
         <h3>About Us</h3>
         <p id="aboutus">
@@ -140,8 +100,6 @@ Additionally, we have a lot of outdoor equipment ready for rent.<br>
 Vataha Burlak | Since 1946
         </p>
     </section>
-</main>
-
 
 <footer>
     <nav>
