--- a/faq.html
+++ b/faq.html
@@ -6,24 +6,112 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FAQ</title>
     <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon">
+    <link href="css/faq.css" rel="stylesheet"></link>
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
-<body>
-    <header>
-        <div id="logo">
-            <span><a href="index.html">Burlaky Shop<br>and equipment rentals</a></span>
+    <!-- <div class="header">
+      <div class="header__section">
+        <div class="header__item hederlogo">
+          Burlaky Shop<br />and equipment rentals
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Shop</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/facebook.png" style="width: 16px;height: 16px;"></a>
-                <li><a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/instagram.png" style="width: 16px;height: 16px;"></a></li>                
-                <li><a href="shoping-cart.html"><img src="img/supermarket.png" style="width: 16px;height: 16px;"></a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="header__item headerButton"><a href="#shop">Shop</a></div>
+        <div class="header__item headerButton"><a href="#about">About</a></div>
+        <div class="header__item headerButton"><a href="faq.html">FAQ</a></div>
+        <div class="header__item headerButton">
+          <a href="contact.html">Contact</a>
+        </div>
+        <div class="header__section">
+        <div class="header__item headerButton">
+          <a href="https://www.facebook.com/Vataga.Burlakiv/"></a
+          ><img
+            src="img/facebook.png"
+            alt="facebook"
+            style="width: 16px;height: 16px;"
+          />
+        </div>
+        <div class="header__item headerButton">
+          <a href="https://www.instagram.com/vataha.burlakiv/"></a
+          ><img
+            src="img/instagram.png"
+            alt="instagram"
+            style="width: 16px;height: 16px;"
+          />
+        </div>
+        <div class="header__item headerButton">
+          <a href="shoping-cart.html"></a
+          ><img
+            src="img/supermarket.png"
+            alt="supermarket"
+            style="width: 16px;height: 16px;"
+          />
+        </div>
+        </div>
+      </div>
+    </div> -->
+  <body>
+    <section>
+      <div class="container">
+        <div class="accordion">
+          <div class="accordion-item" id="question1">
+            <a class="accordion-link" href="#question1">
+              HOW LONG WILL IT TAKE FOR MY ORDER TO ARRIVE AFTER I MAKE PAYMENT?
+              <i class="icon ion-md-add"></i>
+              <i class="icon ion-md-remove"></i>
+            </a>
+            <div class="answer">
+              <p>Members who ship their orders within Singapore should expect to receive their orders within five (5) to ten (10) working days upon payment verification depending on the volume of orders received.If you experience delays in receiving your order, contact us immediately and we will help to confirm the status of your order.</p>
+            </div>
+          </div>
+          <div class="accordion-item" id="question2">
+            <a class="accordion-link" href="#question2">
+              HOW CAN I CHANGE MY SHIPPING ADDRESS?
+              <i class="icon ion-md-add"></i>
+              <i class="icon ion-md-remove"></i>
+            </a>
+            <div class="answer">
+              <p>By default, the last used shipping address will be saved into to your Sample Store account. When you are checking out your order, the default shipping address will be displayed and you have the option to amend it if you need to.</p>
+            </div>
+          </div>
+          <div class="accordion-item" id="question3">
+            <a class="accordion-link" href="#question3">
+              WHY MUST I MAKE PAYMENT IMMEDIATELY AT CHECKOUT?
+              <i class="icon ion-md-add"></i>
+              <i class="icon ion-md-remove"></i>
+            </a>
+            <div class="answer">
+              <p>Sample ordering is on ‘first-come-first-served’ basis. To ensure that you get your desired samples, it is recommended that you make your payment within 60 minutes of checking out.</p>
+            </div>
+          </div>
+          <div class="accordion-item" id="question4">
+            <a class="accordion-link" href="#question4">
+              HOW CAN I TRACK MY ORDERS & PAYMENT?
+              <i class="icon ion-md-add"></i>
+              <i class="icon ion-md-remove"></i>
+            </a>
+            <div class="answer">
+              <p>After logging into your account, the status of your checkout history can be found under Order History. For orders via registered postage, a tracking number (article tracking number) will be given to you after the receipt given from Singapore Post Limited (SingPost).</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </body>
+
+  <!-- <footer>
+    <nav>
+        <a href="shyppingreturns.html">Shipping & Returns</a>
+        <a href="policy.html#payment">Payment Methods</a>
+        <a href="policy.html">Store Policy</a>
+        <a href="contact.html">Contact</a>
+        <p>Tel: 123-456-7890</p>
+    </nav>
+    <div class="social">
+        <a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/footer-facebook.png" alt="FB"></a>
+        <a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/footer-instagram.png" alt="instagram"></a>
+        <a href="mailto:vataha.burlakiv@gmail.com"><img src="img/footer-email.png" alt="email"></a>
+    </div>
+</footer>
 </body>
 </html>
+</html> -->
