--- a/faq.html
+++ b/faq.html
@@ -59,7 +59,9 @@
               <i class="icon ion-md-remove"></i>
             </a>
             <div class="answer">
-              <p>Members who ship their orders within Singapore should expect to receive their orders within five (5) to ten (10) working days upon payment verification depending on the volume of orders received.If you experience delays in receiving your order, contact us immediately and we will help to confirm the status of your order.</p>
+              <p>
+                Members who ship their orders within Singapore should expect to receive their orders within five (5) to ten (10) working days upon payment verification depending on the volume of orders received.If you experience delays in receiving your order, contact us immediately and we will help to confirm the status of your order.
+              </p>
             </div>
           </div>
           <div class="accordion-item" id="question2">
@@ -69,7 +71,9 @@
               <i class="icon ion-md-remove"></i>
             </a>
             <div class="answer">
-              <p>By default, the last used shipping address will be saved into to your Sample Store account. When you are checking out your order, the default shipping address will be displayed and you have the option to amend it if you need to.</p>
+              <p>
+                By default, the last used shipping address will be saved into to your Sample Store account. When you are checking out your order, the default shipping address will be displayed and you have the option to amend it if you need to.
+              </p>
             </div>
           </div>
           <div class="accordion-item" id="question3">
@@ -79,7 +83,9 @@
               <i class="icon ion-md-remove"></i>
             </a>
             <div class="answer">
-              <p>Sample ordering is on ‘first-come-first-served’ basis. To ensure that you get your desired samples, it is recommended that you make your payment within 60 minutes of checking out.</p>
+              <p>
+                Sample ordering is on ‘first-come-first-served’ basis. To ensure that you get your desired samples, it is recommended that you make your payment within 60 minutes of checking out.
+              </p>
             </div>
           </div>
           <div class="accordion-item" id="question4">
@@ -89,13 +95,14 @@
               <i class="icon ion-md-remove"></i>
             </a>
             <div class="answer">
-              <p>After logging into your account, the status of your checkout history can be found under Order History. For orders via registered postage, a tracking number (article tracking number) will be given to you after the receipt given from Singapore Post Limited (SingPost).</p>
+              <p>
+                After logging into your account, the status of your checkout history can be found under Order History. For orders via registered postage, a tracking number (article tracking number) will be given to you after the receipt given from Singapore Post Limited (SingPost).
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-
   </body>
 
   <!-- <footer>
