--- a/faq.html
+++ b/faq.html
@@ -9,12 +9,12 @@
     <link href="css/faq.css" rel="stylesheet"></link>
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
-    <!-- <div class="header">
+    <div class="header">
       <div class="header__section">
         <div class="header__item hederlogo">
-          Burlaky Shop<br />and equipment rentals
+          <a href="index.html">Burlaky Shop<br />and equipment rentals</a>
         </div>
-        <div class="header__item headerButton"><a href="#shop">Shop</a></div>
+        <div class="header__item headerButton"><a href="index.html#shop">Shop</a></div>
         <div class="header__item headerButton"><a href="#about">About</a></div>
         <div class="header__item headerButton"><a href="faq.html">FAQ</a></div>
         <div class="header__item headerButton">
@@ -47,7 +47,7 @@
         </div>
         </div>
       </div>
-    </div> -->
+    </div>
   <body>
     <section>
       <div class="container">
@@ -104,8 +104,7 @@
       </div>
     </section>
   </body>
-
-  <!-- <footer>
+  <footer>
     <nav>
         <a href="shyppingreturns.html">Shipping & Returns</a>
         <a href="policy.html#payment">Payment Methods</a>
@@ -121,4 +120,4 @@
 </footer>
 </body>
 </html>
-</html> -->
+</html>
