contact page step 1

--- a/contact.html
+++ b/contact.html
@@ -1,61 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Contact Shop</title>
+    <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/contact.css" />
+  </head>
+  <!DOCTYPE html>
+  <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Contact Shop</title>
-        <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon">
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>Burlaky Shop</title>
+      <link
+        rel="shortcut icon"
+        href="img/burlaky.logo.ico"
+        type="image/x-icon"
+      />
+      <link rel="stylesheet" href="css/index.css" />
     </head>
-<body>
-    <header>
-        <div id="logo">
-            <span><a href="index.html">Burlaky Shop<br>and equipment rentals</a></span>
+    <body>
+      <div class="header">
+        <div class="header__section">
+          <div class="header__item hederlogo">
+            Burlaky Shop<br />and equipment rentals
+          </div>
+          <div class="header__item headerButton"><a href="#shop">Shop</a></div>
+          <div class="header__item headerButton">
+            <a href="#about">About</a>
+          </div>
+          <div class="header__item headerButton">
+            <a href="faq.html">FAQ</a>
+          </div>
+          <div class="header__item headerButton">
+            <a href="contact.html">Contact</a>
+          </div>
+          <div class="header__section">
+            <div class="header__item headerButton">
+              <a href="https://www.facebook.com/Vataga.Burlakiv/"></a
+              ><img
+                src="img/facebook.png"
+                alt="facebook"
+                style="width: 16px;height: 16px;"
+              />
+            </div>
+            <div class="header__item headerButton">
+              <a href="https://www.instagram.com/vataha.burlakiv/"></a
+              ><img
+                src="img/instagram.png"
+                alt="instagram"
+                style="width: 16px;height: 16px;"
+              />
+            </div>
+            <div class="header__item headerButton">
+              <a href="shoping-cart.html"></a
+              ><img
+                src="img/supermarket.png"
+                alt="supermarket"
+                style="width: 16px;height: 16px;"
+              />
+            </div>
+          </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Shop</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/facebook.png" style="width: 16px;height: 16px;"></a>
-                <li><a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/instagram.png" style="width: 16px;height: 16px;"></a></li>                
-                <li><a href="shoping-cart.html"><img src="img/supermarket.png" style="width: 16px;height: 16px;"></a></li>
-            </ul>
-        </nav>
-    </header>
-        <section>
-            <h3>Contact</h3>
-            <h5>You're welcome to contacy us with any inquiry</h5>
-            <p>Tel: 123-456-7890</p>
-            <a href="mailto:vataha.burlakiv@gmail.com">vataha.burlakiv@gmail.com</a>
-        </section>
-        <section>
-            <form action="https://formspree.io/mpzdabaw" method="POST">
-                <input type="text" placeholder="Name" required name="Name"></label><br>
-                <input type="text" placeholder="Email" required name="Email"></label><br>
-                <input type="text" placeholder="Phone" required name="Phone"></label><br>
-                <input type="text" placeholder="Type your message here..." required name="Type your message here..."></label><br>
-                <input type="submit" value="Submit">
-            </form> 
-        </section>
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="mailto:vataha.burlakiv@gmail.com" target="_top">vataha.burlakiv@gmail.com</a></li>
-                    <li><a href="shypping returns.html">Shipping & Returns</a></li>
-                    <li><a href="payments.html">Payment Methods</a></li>
-                    <li><a href="policy.html">Store Policy</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><p>Tel: 123-456-7890</p></li>
-                    <li><a href="https://www.facebook.com/Vataga.Burlakiv/">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/vataha.burlakiv/">Instagram</a></li>
-                    <li><a href="contact.html"><p>Join our mailing list and never miss an update</p></a></li>
-                    <input type="email" placeholder="Enter your email here*">
-                    <input type="submit">
-                </ul>
-            </nav>
-        </section>
-</body>
+      </div>
+    </body>
+    <main>
+    <section>
+      <div class="contactus">
+        <h3>Contact</h3>
+        <h5>You're welcome to contacy us with any inquiry</h5>
+        <p>Tel: 123-456-7890</p>
+      </div>
+
+      <div class="form-inputs">
+        <form action="https://formspree.io/mpzdabaw" method="POST">
+          <input type="text" placeholder="Name" required name="Name" /><br />
+          <input type="text" placeholder="Email" required name="Email" /><br />
+          <input type="text" placeholder="Phone" required name="Phone" /><br />
+          <input
+            type="text"
+            placeholder="Type your message here..."
+            required
+            name="Type your message here..."
+          /><br />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+      <div class="mailing-list">
+        <a href="contact.html">
+          <p>Join our mailing list and never miss an update</p>
+        </a>
+        <input type="email" placeholder="Enter your email here*" />
+        <input type="submit" />
+      </div>
+    </section>
+</main>
+    <footer>
+      <nav>
+        <a href="shyppingreturns.html">Shipping & Returns</a>
+        <a href="policy.html#payment">Payment Methods</a>
+        <a href="policy.html">Store Policy</a>
+        <a href="contact.html">Contact</a>
+        <p>Tel: 123-456-7890</p>
+      </nav>
+      <div class="social">
+        <a href="https://www.facebook.com/Vataga.Burlakiv/"
+          ><img src="img/footer-facebook.png" alt="FB"
+        /></a>
+        <a href="https://www.instagram.com/vataha.burlakiv/"
+          ><img src="img/footer-instagram.png" alt="instagram"
+        /></a>
+        <a href="mailto:vataha.burlakiv@gmail.com"
+          ><img src="img/footer-email.png" alt="email"
+        /></a>
+      </div>
+    </footer>
+  </html>
 </html>
