--- a/index.html
+++ b/index.html
@@ -92,13 +92,15 @@
         </div>
     </article>
   </main>
-    <section id="about">
+    <section>
+      <div class="about">
         <h3>About Us</h3>
         <p id="aboutus">
             We propose you to bye unique items from our branded shop.
 Additionally, we have a lot of outdoor equipment ready for rent.<br>
 Vataha Burlak | Since 1946
         </p>
+      </div>
     </section>
 <footer>
     <nav>
