first Boostrap atempt

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </article>
   </main>
     <section>
-      <div class="about">
+      <div class="about" id="about">
         <h3>About Us</h3>
         <p id="aboutus">
             We propose you to bye unique items from our branded shop.
