--- a/contact.html
+++ b/contact.html
@@ -1,122 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Contact Shop</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/contact.css" />
+
+    <title>Burlaky Shop</title>
   </head>
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <title>Burlaky Shop</title>
-      <link
-        rel="shortcut icon"
-        href="img/burlaky.logo.ico"
-        type="image/x-icon"
-      />
-      <link rel="stylesheet" href="css/index.css" />
-    </head>
-    <body>
-      <div class="header">
-        <div class="header__section">
-          <div class="header__item hederlogo">
-            Burlaky Shop<br />and equipment rentals
-          </div>
-          <div class="header__item headerButton"><a href="#shop">Shop</a></div>
-          <div class="header__item headerButton">
-            <a href="#about">About</a>
-          </div>
-          <div class="header__item headerButton">
-            <a href="faq.html">FAQ</a>
-          </div>
-          <div class="header__item headerButton">
-            <a href="contact.html">Contact</a>
-          </div>
-          <div class="header__section">
-            <div class="header__item headerButton">
-              <a href="https://www.facebook.com/Vataga.Burlakiv/"></a
-              ><img
-                src="img/facebook.png"
-                alt="facebook"
-                style="width: 16px;height: 16px;"
-              />
-            </div>
-            <div class="header__item headerButton">
-              <a href="https://www.instagram.com/vataha.burlakiv/"></a
-              ><img
-                src="img/instagram.png"
-                alt="instagram"
-                style="width: 16px;height: 16px;"
-              />
-            </div>
-            <div class="header__item headerButton">
-              <a href="shoping-cart.html"></a
-              ><img
-                src="img/supermarket.png"
-                alt="supermarket"
-                style="width: 16px;height: 16px;"
-              />
-            </div>
-          </div>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="img/burlaky.logo.ico"
+            width="30"
+            height="30"
+            class="d-inline-block align-top"
+            alt=""
+          />
+          Burlaky Shop<br />and equipment rentals
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html#shop"
+                >Shop <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link disabled"
+                href="#"
+                tabindex="-1"
+                aria-disabled="true"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div
+      id="photoCarousel"
+      class="carousel slide container"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/gf1.jpg" class="d-block w-100" alt="velyka rada" />
+        </div>
+        <div class="carousel-item">
+          <img src="img/gf2.jpg" class="d-block w-100" alt="tary" />
+        </div>
+        <div class="carousel-item">
+          <img src="img/gf3.jpg" class="d-block w-100" alt="goverla" />
         </div>
       </div>
-    </body>
-    <main>
-    <section>
-      <div class="contactus">
-        <h3>Contact</h3>
-        <h5>You're welcome to contacy us with any inquiry</h5>
-        <p>Tel: 123-456-7890</p>
-      </div>
-
-      <div class="form-inputs">
-        <form action="https://formspree.io/mpzdabaw" method="POST">
-          <input type="text" placeholder="Name" required name="Name" /><br />
-          <input type="text" placeholder="Email" required name="Email" /><br />
-          <input type="text" placeholder="Phone" required name="Phone" /><br />
+      <a
+        class="carousel-control-prev"
+        href="#photoCarousel"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#photoCarousel"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <form>
+      <div class="container w-100 p-3">
+        <div class="form-group ">
+          <div class="form-group">
+            <label for="exampleInputPassword1">Name</label>
+            <input class="form-control" type="text" placeholder="Name" />
+          </div>
           <input
-            type="text"
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+          <small id="emailHelp" class="form-text text-muted"
+            >We'll never share your email with anyone else.</small
+          >
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Phone</label>
+          <input class="form-control" type="text" placeholder="Phone" />
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1"></label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
             placeholder="Type your message here..."
-            required
-            name="Type your message here..."
-          /><br />
-          <input type="submit" value="Submit" />
-        </form>
+          ></textarea>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        <footer>
+          <nav>
+            <a href="shyppingreturns.html">Shipping & Returns</a>
+            <a href="policy.html#payment">Payment Methods</a>
+            <a href="policy.html">Store Policy</a>
+            <a href="contact.html">Contact</a>
+            <p>Tel: 123-456-7890</p>
+          </nav>
+          <div class="social">
+            <a href="https://www.facebook.com/Vataga.Burlakiv/"
+              ><img src="img/footer-facebook.png" alt="FB"
+            /></a>
+            <a href="https://www.instagram.com/vataha.burlakiv/"
+              ><img src="img/footer-instagram.png" alt="instagram"
+            /></a>
+            <a href="mailto:vataha.burlakiv@gmail.com"
+              ><img src="img/footer-email.png" alt="email"
+            /></a>
+          </div>
+        </footer>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script
+          src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+          integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+          crossorigin="anonymous"
+        ></script>
+        <script
+          src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+          crossorigin="anonymous"
+        ></script>
+        <script
+          src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+          crossorigin="anonymous"
+        ></script>
       </div>
-      <div class="mailing-list">
-        <a href="contact.html">
-          <p>Join our mailing list and never miss an update</p>
-        </a>
-        <input type="email" placeholder="Enter your email here*" />
-        <input type="submit" />
-      </div>
-    </section>
-</main>
-    <footer>
-      <nav>
-        <a href="shyppingreturns.html">Shipping & Returns</a>
-        <a href="policy.html#payment">Payment Methods</a>
-        <a href="policy.html">Store Policy</a>
-        <a href="contact.html">Contact</a>
-        <p>Tel: 123-456-7890</p>
-      </nav>
-      <div class="social">
-        <a href="https://www.facebook.com/Vataga.Burlakiv/"
-          ><img src="img/footer-facebook.png" alt="FB"
-        /></a>
-        <a href="https://www.instagram.com/vataha.burlakiv/"
-          ><img src="img/footer-instagram.png" alt="instagram"
-        /></a>
-        <a href="mailto:vataha.burlakiv@gmail.com"
-          ><img src="img/footer-email.png" alt="email"
-        /></a>
-      </div>
-    </footer>
-  </html>
+    </form>
+  </body>
 </html>
