--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+      <nav class="navbar navbar-expand-lg my-5" style="background-color: #689CD2;">
         <a class="navbar-brand" href="index.html">
           <img
             src="img/burlaky.logo.ico"
@@ -106,7 +106,7 @@
       </a>
     </div>
     <form>
-      <div class="container w-100 p-3">
+      <div class="container w-100 p-3 my-2">
         <div class="form-group ">
           <div class="form-group">
             <label for="exampleInputPassword1">Name</label>
