--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg my-5" style="background-color: #689CD2;">
+      <nav class="navbar navbar-expand-lg" style="background-color: #689CD2;">
         <a class="navbar-brand" href="index.html">
           <img
             src="img/burlaky.logo.ico"
@@ -72,7 +72,7 @@
     </header>
     <div
       id="photoCarousel"
-      class="carousel slide container"
+      class="carousel slide container my-5"
       data-ride="carousel"
     >
       <div class="carousel-inner">
