--- a/index.html
+++ b/index.html
@@ -1,120 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Burlaky Shop</title>
-    <link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/index.css" />
-  </head>
-  <body>
-    <div class="header">
-      <div class="header__section">
-        <div class="header__item hederlogo">
-          Burlaky Shop<br />and equipment rentals
-        </div>
-        <div class="header__item headerButton"><a href="#shop">Shop</a></div>
-        <div class="header__item headerButton"><a href="#about">About</a></div>
-        <div class="header__item headerButton"><a href="faq.html">FAQ</a></div>
-        <div class="header__item headerButton">
-          <a href="contact.html">Contact</a>
-        </div>
-        <div class="header__section">
-        <div class="header__item headerButton">
-          <a href="https://www.facebook.com/Vataga.Burlakiv/"></a
-          ><img
-            src="img/facebook.png"
-            alt="facebook"
-            style="width: 16px;height: 16px;"
-          />
-        </div>
-        <div class="header__item headerButton">
-          <a href="https://www.instagram.com/vataha.burlakiv/"></a
-          ><img
-            src="img/instagram.png"
-            alt="instagram"
-            style="width: 16px;height: 16px;"
-          />
-        </div>
-        <div class="header__item headerButton">
-          <a href="shoping-cart.html"></a
-          ><img
-            src="img/supermarket.png"
-            alt="supermarket"
-            style="width: 16px;height: 16px;"
-          />
-        </div>
-        </div>
-      </div>
-    </div>
-  </body>
-<main>
-  <div class="product-list">
-    <article class="product-card">
-        <div class="item-name">ECO-TORBA</div>
-        <img src="img/ecotorba.jpg" alt="ecotorba">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="price">150 &#8372</div>
-        <div class="button-group">
-            <button class="button card-button">Info</button>
-            <button class="button card-button">Buy</button>
-        </div>
-    </article>
-    <article class="product-card">
-      <div class="item-name">PS Girls</div>
-      <img src="img/futbagirls.jpg" alt="Cybertruck">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="price">350 &#8372</div>
-        <div class="button-group">
-            <button class="button card-button">Info</button>
-            <button class="button card-button">Buy</button>
-        </div>
-    </article>
-    <article class="product-card">
-      <div class="item-name">White Jack</div>
-      <img src="img/futbolka.jpg" alt="Cybertruck">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="price">150 &#8372</div>
-        <div class="button-group">
-            <button class="button card-button">Info</button>
-            <button class="button card-button">Buy</button>
-        </div>
-    </article>
-    <article class="product-card">
-      <div class="item-name">PS Boys</div>
-      <img src="img/futbaboys.jpg" alt="Cybertruck">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="price">150 &#8372</div>
-        <div class="button-group">
-            <button class="button card-button">Info</button>
-            <button class="button card-button">Buy</button>
-        </div>
-    </article>
-  </main>
-    <section>
-      <div class="about" id="about">
-        <h3>About Us</h3>
-        <p id="aboutus">
-            We propose you to bye unique items from our branded shop.
-Additionally, we have a lot of outdoor equipment ready for rent.<br>
-Vataha Burlak | Since 1946
-        </p>
-      </div>
-    </section>
-<footer>
-    <nav>
-        <a href="shyppingreturns.html">Shipping & Returns</a>
-        <a href="policy.html#payment">Payment Methods</a>
-        <a href="policy.html">Store Policy</a>
-        <a href="contact.html">Contact</a>
-        <p>Tel: 123-456-7890</p>
-    </nav>
-    <div class="social">
-        <a href="https://www.facebook.com/Vataga.Burlakiv/"><img src="img/footer-facebook.png" alt="FB"></a>
-        <a href="https://www.instagram.com/vataha.burlakiv/"><img src="img/footer-instagram.png" alt="instagram"></a>
-        <a href="mailto:vataha.burlakiv@gmail.com"><img src="img/footer-email.png" alt="email"></a>
-    </div>
-</footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Burlaky Shop</title>
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			crossorigin="anonymous"
+		/>
+		<link rel="shortcut icon" href="img/burlaky.logo.ico" type="image/x-icon" />
+		<link rel="stylesheet" href="css/index.css" />
+	</head>
+	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg" style="background-color: #689CD2;">
+				<a class="navbar-brand" href="index.html">
+					<img
+						src="img/burlaky.logo.ico"
+						width="30"
+						height="30"
+						class="d-inline-block align-top"
+						alt=""
+					/>
+					Burlaky Shop<br />and equipment rentals
+				</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html#shop"
+								>Shop <span class="sr-only">(current)</span></a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="index.html#about">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="faq.html">FAQ</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		<div class="container-fluid">
+			<div class="container my-5">
+				<div class="row text-center justify-content-center">
+					<div class="col-xs-12 col-sm-4 col-lg-3">
+						<img src="img/ecotorba.jpg" alt="" class="w-100" />
+						<h3>Eco-Torba</h3>
+						<p>150 &#8372</p>
+						<button type="button" class="btn btn-dark mx-3 my-3">Buy</button>
+						<button type="button" class="btn btn-dark mx-3 my-3">Info</button>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-lg-3">
+						<img src="img/futbaboys.jpg" alt="" class="w-100" />
+						<h3>PS Boys</h3>
+						<p>350 &#8372</p>
+						<button type="button" class="btn btn-dark mx-3 my-3">Buy</button>
+						<button type="button" class="btn btn-dark mx-3 my-3">Info</button>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-lg-3">
+						<img src="img/futbagirls.jpg" alt="" class="w-100" />
+						<h3>PS Girls</h3>
+						<p>350 &#8372</p>
+						<button type="button" class="btn btn-dark mx-3 my-3">Buy</button>
+						<button type="button" class="btn btn-dark mx-3 my-3">Info</button>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-lg-3">
+						<img src="img/futbolka.jpg" alt="" class="w-100" />
+						<h3>White Jack</h3>
+						<p>150 &#8372</p>
+						<button type="button" class="btn btn-dark mx-3 my-3">Buy</button>
+						<button type="button" class="btn btn-dark mx-3 my-3">Info</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<section>
+			<div class="about container text-center" id="about">
+				<h3>About Us</h3>
+				<p id="aboutus">
+					We propose you to bye unique items from our branded shop.
+					Additionally, we have a lot of outdoor equipment ready for rent.<br />
+					Vataha Burlak | Since 1946
+				</p>
+			</div>
+		</section>
+		<footer>
+			<div class="container text-center">
+				<nav>
+					<a href="shyppingreturns.html">Shipping & Returns</a>
+					<a href="policy.html#payment">Payment Methods</a>
+					<a href="policy.html">Store Policy</a>
+					<a href="contact.html">Contact</a>
+					<p>Tel: 123-456-7890</p>
+				</nav>
+				<div class="social">
+					<a href="https://www.facebook.com/Vataga.Burlakiv/"
+						><img src="img/footer-facebook.png" alt="FB"
+					/></a>
+					<a href="https://www.instagram.com/vataha.burlakiv/"
+						><img src="img/footer-instagram.png" alt="instagram"
+					/></a>
+					<a href="mailto:vataha.burlakiv@gmail.com"
+						><img src="img/footer-email.png" alt="email"
+					/></a>
+				</div>
+			</div>
+		</footer>
+		<script
+			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
