--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg" style="background-color: #689CD2;">
+			<nav class="navbar navbar-light navbar-expand-lg" style="background-color: #689CD2;">
 				<a class="navbar-brand" href="index.html">
 					<img
 						src="img/burlaky.logo.ico"
