--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html"><img
+								src="img/supermarket.png"
+								alt="supermarket"
+								style="width: 16px;height: 16px;"
+							  /></a>
+						</li>
 					</ul>
 				</div>
 			</nav>
